--- a/WpfTrayApp462/WpfTrayApp462.csproj
+++ b/WpfTrayApp462/WpfTrayApp462.csproj
@@ -81,7 +81,9 @@
     </ApplicationDefinition>
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Services\Concrete\EmployeeService.cs" />
+    <Compile Include="Services\Concrete\WindowService.cs" />
     <Compile Include="Services\IEmployeeService.cs" />
+    <Compile Include="Services\IWindowService.cs" />
     <Compile Include="ViewModels\EmployeeViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\TrayIconViewModel.cs" />
@@ -101,6 +103,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Resources\TaskBarIconResources.xaml" />
     <Page Include="Views\EmployeeView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
